<resources>
    <string name="app_name">Spot Guide</string>

    <string name="bar_menu_map">Map</string>
    <string name="bar_menu_profile">Profile</string>

    <string name="spot_add">Add</string>
    <string name="spot_add_new_header">Add spot</string>
    <string name="spot_add_new_category">Category</string>
    <string name="spot_add_new_choose_category">Choose category</string>
    <string name="spot_add_new_ground_quality">Ground quality</string>
    <string name="spot_add_new_photos">Photos</string>
    <string name="spot_add_new_description">Description</string>
    <string name="spot_add_new_description_hint">Tell something more about this spot…</string>
    <string name="spot_add_new_cancel">Cancel</string>
    <string name="spot_add_new_confirm">Confirm</string>
    <string name="spot_add_new_adding">Adding spot...</string>
    <string name="spot_add_new_unknown_location">Unknown location</string>
    <string name="spot_add_new_added">Spot added</string>

    <string name="spot_detail_navigate">Navigate</string>
    <string name="spot_detail_description">Description</string>
    <string name="spot_detail_add_review">Add review</string>
    <string name="spot_detail_adding_review">Adding review...</string>
    <string name="spot_detail_no_reviews">No reviews</string>

    <string name="general_missing_permission">App need this permission for correct behaviour</string>

    <string name="gallery_images_loading">Images loading...</string>
    <string name="gallery_screen_header">Gallery</string>

</resources>
