<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/vBottomButtons"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/text_size_16"
                />

            <EditText
                android:id="@+id/etSpotName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginTop="@dimen/margin_middle"
                />

            <include
                android:id="@+id/vStarRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                layout="@layout/view_rating_bar"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_middle"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/grey_text"
                android:textSize="@dimen/text_size_16"
                android:layout_marginTop="@dimen/margin_middle"
                android:text="@string/spot_add_new_category"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/AppButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/spot_add_new_choose_category"
                android:textAllCaps="false"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_text"
                android:textSize="@dimen/text_size_16"
                android:text="@string/spot_add_new_ground_quality"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_middle"
                />

            <include
                android:id="@+id/vGroundRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                layout="@layout/view_ground_rating_bar"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_text"
                android:textSize="@dimen/text_size_16"
                android:text="@string/spot_add_new_photos"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_biggest"
                />

            <ImageView
                android:id="@+id/ivAddPhotos"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_add"
                android:tint="@color/colorAccent"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_gravity="end"
                />

            <!--        RV with carousel effect -->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPhotos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/grey_text"
                android:textSize="@dimen/text_size_16"
                android:layout_marginTop="@dimen/margin_big"
                android:text="@string/spot_add_new_description"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/text_input_field_colors_list"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginBottom="@dimen/margin_default"
                android:hint="@string/spot_add_new_description_hint"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/text_size_16"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/vBottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/view_bottom_buttons_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>