<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <com.google.android.material.button.MaterialButton
            android:layout_width="50dp"
            android:layout_height="20dp"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="5dp"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_gravity="center_horizontal"
            />
        
        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_default"
            android:src="@drawable/ic_heart_empty"
            />

        <TextView
            android:id="@+id/tvSpotName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_24"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/margin_default"
            />

        <TextView
            android:id="@+id/tvSpotLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_text"
            android:textSize="@dimen/text_size_16"
            android:layout_marginStart="@dimen/margin_default"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bNavigate"
                style="@style/AppButton"
                android:layout_marginStart="@dimen/margin_default"
                android:text="@string/spot_detail_navigate"
                app:backgroundTint="@color/colorAccent"
                />

            <TextView
                android:id="@+id/tvCategoryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/margin_default"
                android:textSize="@dimen/text_size_16"
                />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_middle"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/grey_text_light"
            android:text="@string/spot_detail_description"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/grey_text"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPhotos"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="@dimen/margin_middle"
            android:layout_marginBottom="@dimen/margin_middle"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bAddReview"
            style="@style/AppButton"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_default"
            android:text="@string/spot_detail_add_review"
            app:backgroundTint="@color/colorAccent"
            />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/reviewsLoading"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:SpinKit_Style="ThreeBounce"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/colorAccent"
            />

        <TextView
            android:id="@+id/tvNoReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/grey_text"
            android:visibility="visible"
            android:layout_gravity="center_horizontal"
            android:text="@string/spot_detail_no_reviews"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default"
            />
        
    </LinearLayout>

</ScrollView>